--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+<title>My Page Title</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <p><b>Hello! Welcome to my website this is just a testing website for now. Please wait for more updates!</b></p>
 <iframe src="https://scratch.mit.edu/projects/495368701/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
