--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<title>My Page Title</title>
-  <link rel="icon" type="image/x-icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pokemon.com%2F&psig=AOvVaw2kQiX3zWYfklsOwVQKmYh5&ust=1647543222423000&source=images&cd=vfe&ved=0CAgQjRxqFwoTCIjAv_Wmy_YCFQAAAAAdAAAAABAD">
+<title>FlickFlockUnblock 2.0</title>
 <p><b>Hello! Welcome to my website this is just a testing website for now. Please wait for more updates!</b></p>
 <iframe src="https://scratch.mit.edu/projects/495368701/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
