--- a/index.html
+++ b/index.html
@@ -2,5 +2,10 @@
 <html>
 <body>
 <title>FlickFlockUnblock 2.0</title>
+<h1>My First JavaScript</h1>
+
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
 <p><b>Hello! Welcome to my website this is just a testing website for now. Please wait for more updates!</b></p>
 <iframe src="https://scratch.mit.edu/projects/495368701/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
