--- a/index.html
+++ b/index.html
@@ -5,3 +5,8 @@
 <p><b>Hello! Welcome to my website this is just a testing website for now. Please wait for more updates!</b></p>
 <iframe src="https://scratch.mit.edu/projects/495368701/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l18A5BOTlzE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  <p><b>TESTING STUFF</b></p>
+  <button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
