--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l18A5BOTlzE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   <h1>TESTING ZONE BEWARE</h1>
-  <button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
+<video width="500px" height="500px" 
+        controls="controls"/> 
+          
+        <source src="videoplayback.mp4" 
+            type="videoplayback.mp4"> 
+    </video> 
