--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l18A5BOTlzE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   <h1>TESTING ZONE BEWARE</h1>
-<video width="500px" height="500px" 
-        controls="controls"/> 
-          
-        <source src="https://drive.google.com/file/d/1nyzoDQ-sXwr4OaryVJMBWcQVh9bxP-P4/view?usp=sharing" 
-            type="videoplayback.mp4"> 
-    </video> 
+<iframe width="420" height="315"
+src="www.youtube.com/embed/E3XE14upb4I">
+</iframe>
