--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <iframe src="https://scratch.mit.edu/projects/495368701/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l18A5BOTlzE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-  <h1>TESTING ZONE BEWARE</h1>
-<iframe width="420" height="315"
-src="www.youtube.com/embed/E3XE14upb4I">
-</iframe>
+  <h1>Fnaf Songs</h1>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/l18A5BOTlzE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/YREhVveHq9k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
