--- a/index.html
+++ b/index.html
@@ -8,3 +8,9 @@
   <h1>Fnaf Songs</h1>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/l18A5BOTlzE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YREhVveHq9k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+  <h1>TESTING</h1>
+  <script src="https://xxsibxx.github.io/ruffleembedsetup112/ruffle/ruffle.js"></script>
+<div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
+        <embed height="480" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="https://mythiccccc.github.io/siteswtesting/SuperSmashFlash.swf" type="application/x-shockwave-flash" width="620"></embed>
+</div>
