--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<html>
-<body>
-<title>FlickFlockUnblock 2.0</title>
-<p><b>Hello! Welcome to my website this is just a testing website for now. Please wait for more updates!</b></p>
-<iframe src="https://scratch.mit.edu/projects/495368701/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+<html lang="en">
+  <head>
+    <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+    <script src="https://github.com/WalletConnect/walletconnect-monorepo/releases/download/1.4.1/web3-provider.min.js"></script>
+    <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <h1 class="title">Moralis x WalletConnect</h1>
+      <p id="subheader"></p>
+    </header>
 
-  <h1>Fnaf Songs</h1>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/l18A5BOTlzE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/YREhVveHq9k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <main>
+      <section class="buttons">
+        <button id="btn-auth">Login</button>
+        <button id="btn-logout">Logout</button>
+        <button id="btn-enable">Enable web3</button>
+        <button id="btn-call">Test sign call</button>
+      </section>
+      <section class="result" id="result"></section>
+    </main>
 
-  <h1>TESTING</h1>
-  <script src="https://xxsibxx.github.io/ruffleembedsetup112/ruffle/ruffle.js"></script>
-<div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
-        <embed height="480" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="https://mythiccccc.github.io/siteswtesting/SuperSmashFlash.swf" type="application/x-shockwave-flash" width="620"></embed>
-</div>
+    <!-- scripts -->
+    <script src="script.js"></script>
+  </body>
+</html>
